@@ -526,7 +526,7 @@ public class RecyclerBytesStreamOutputTests extends ESTestCase {
 
         final ImmutableOpenMap<String, String> expected = expectedBuilder.build();
         final RecyclerBytesStreamOutput out = new RecyclerBytesStreamOutput(recycler);
-        out.writeImmutableMap(expected, StreamOutput::writeString, StreamOutput::writeString);
+        out.writeMap(expected, StreamOutput::writeString, StreamOutput::writeString);
         final StreamInput in = StreamInput.wrap(BytesReference.toBytes(out.bytes()));
         final ImmutableOpenMap<String, String> loaded = in.readImmutableMap(StreamInput::readString, StreamInput::readString);
 
@@ -542,7 +542,7 @@ public class RecyclerBytesStreamOutputTests extends ESTestCase {
 
         final ImmutableOpenMap<TestWriteable, TestWriteable> expected = expectedBuilder.build();
         final RecyclerBytesStreamOutput out = new RecyclerBytesStreamOutput(recycler);
-        out.writeImmutableMap(expected);
+        out.writeMap(expected);
         final StreamInput in = StreamInput.wrap(BytesReference.toBytes(out.bytes()));
         final ImmutableOpenMap<TestWriteable, TestWriteable> loaded = in.readImmutableMap(TestWriteable::new, TestWriteable::new);
 
@@ -718,8 +718,8 @@ public class RecyclerBytesStreamOutputTests extends ESTestCase {
         Map<String, Object> reverseMap = new TreeMap<>(Collections.reverseOrder());
         reverseMap.putAll(map);
 
-        List<String> mapKeys = map.entrySet().stream().map(Map.Entry::getKey).collect(Collectors.toList());
-        List<String> reverseMapKeys = reverseMap.entrySet().stream().map(Map.Entry::getKey).collect(Collectors.toList());
+        List<String> mapKeys = map.entrySet().stream().map(Map.Entry::getKey).toList();
+        List<String> reverseMapKeys = reverseMap.entrySet().stream().map(Map.Entry::getKey).toList();
 
         assertNotEquals(mapKeys, reverseMapKeys);
 
